--- a/pwa/index.html
+++ b/pwa/index.html
@@ -28,6 +28,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="new-post">New Post</a>
+            </li>
           </ul>
           <span class="my-2 my-lg-0" id="username">
               <a href="#" class="text-secondary" id="username-changer"></a>
@@ -35,39 +38,8 @@
         </div>
       </nav>
 
-<div class="container">
-  <div class="card mt-3">
-      <div class="card-body">
-          <h4 class="card-title">Title</h4>
-          <p class="card-text">Text</p>
-          <div class="row">
-              <a href="#" class="text-secondary like-post" id="like-post-1">
-                <i class="mx-3 fa fa-thumbs-o-up"></i>
-              </a> 
-              <a href="#"class="text-secondary like-post-show" id="like-post-show-users-1">0</a>
+<div class="container" id="post-container">
 
-              <a href="#" class="text-secondary comment-post" id="comment-post-1">
-                <i class="mx-3 fa fa-comments-o"></i>
-              </a> 
-              <a  href="#" class="text-secondary comment-post-show" id="comment-post-show-users-1">0</a>
-              <div class="ml-auto mr-3">2020-05-08 20:55:58</div> 
-          </div>
-          <hr>
-
-          <div class="collapse" id="comment-collapse-1">
-            <div class="card card-body">
-              <ul class="list-group" id="comment-list-group-1">
-              </ul>         
-            </div>
-          </div>
-          <form>
-            <div class="form-group mt-3">
-              <input type="text" class="form-control" id="comment-content-1" placeholder="Comment">
-            </div>
-            <button type="button" class="post-commentary btn btn-primary" id="submit-commentary-1" class="btn btn-primary">Submit</button>
-          </form>
-      </div>
-  </div>
 </div>
 
 <div class="modal fade" id="likes-modal" tabindex="-1" role="dialog" aria-labelledby="likesModalLongTitle" aria-hidden="true">
@@ -81,12 +53,32 @@
       </div>
       <div class="modal-body">
         <ul class="list-group" id="likes-list">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Morbi leo risus</li>
-          <li class="list-group-item">Porta ac consectetur ac</li>
-          <li class="list-group-item">Vestibulum at eros</li>
         </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="post-modal" tabindex="-1" role="dialog" aria-labelledby="postsModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="postsModalLongTitle">New Post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group mt-3">
+            <input type="text" class="form-control" id="post-content" placeholder="Say Something...">
+          </div>
+          <button type="button" class="btn btn-primary" id="submit-post" class="btn btn-primary">Submit</button>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
